rename test and methods in tests